ajustes-jogo-memoria

--- a/css/reset.css
+++ b/css/reset.css
@@ -7,4 +7,5 @@
     list-style: none;
     border: none;
     font-family: 'Press Start 2P', cursive;
+    background-image: url(../images/rick-background.png);
 }
