--- a/css/game.css
+++ b/css/game.css
@@ -3,6 +3,7 @@ main {
     flex-direction: column;
     width: 100%;
     background-image: url(../images/bg.jpg);
+
     background-size: cover;
     min-height: 100vh;
     align-items: center;
@@ -19,8 +20,19 @@ header {
     padding: 30px;
     margin: 0px 0px 30px;
     border-radius: 5px;
-    background-color: rgba(255, 2555, 2555, 0.8);
+    background: rgba(255, 2555, 2555, 0.8);
     font-size: 1.2em;
+}
+.player {
+    background: transparent;
+}
+
+.timer-bg {
+    background: transparent;
+}
+
+.timer {
+    background: transparent;
 }
 
 .grid {
