--- a/css/login.css
+++ b/css/login.css
@@ -1,9 +1,24 @@
+.login-box {
+    width: 100%;
+    height: 100%; 
+    display: flex;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
+    width: 50vh;
     justify-content: center;
+    border-radius: 30px;
+   
+    background: #ffffff30;
+    backdrop-filter: blur(10px);
 }
 
 .login_header {
@@ -12,21 +27,25 @@
     flex-direction: column;
     justify-content: center;
     margin-bottom: 50px;
+    background: transparent;
 }
 
 .login_header img {
     width: 100px;
+    background: transparent;
+ 
 }
 
 .login_header h1 {
-    color: #333;
+    color: #fff;
     font-size: 1.5em;
+    background: transparent
 }
 
 .login_input {
     border: 2px solid #333;
     border-radius: 8px;
-    color: #333;
+    color: #fff;
     font-size: 1em;
     margin-bottom: 15px;
     max-width: 300px;
@@ -36,7 +55,7 @@
 }
 
 .login_button {
-    background-color: #ee665c;
+    background: #ee665c;
     border-radius: 8px;
     color: #fff;
     cursor: pointer;
@@ -44,11 +63,22 @@
     font-size: 1em;
     padding: 15px;
     width: 100%;
+    transition: all .3s ease;
 }
 
 .login_button:disabled {
-    background-color: #Eee;
-    color: #aaa;
+    background: #ffffff30;
+    color: #fff;
     cursor: auto;
+    transition: all .3s ease;
+}
 
+@media only screen and (max-width: 360px){
+    .login_header h1 {
+        color: #fff;
+        font-size: 1.1em;
+        background: transparent;
+        align-items: center;
+        justify-content: center;
+    }
 }
