jogo-da-memoria

--- a/css/login.css
+++ b/css/login.css
@@ -36,7 +36,7 @@
 }
 
 .login_header h1 {
-    color: #fff;
+    color: #333;
     font-size: 1.5em;
     background: transparent
 }
@@ -44,18 +44,22 @@
 .login_input {
     border: 2px solid #333;
     border-radius: 8px;
-    color: #fff;
+    color: rgb(27, 27, 27);
     font-size: 1em;
     margin-bottom: 15px;
     max-width: 300px;
     outline: none;
     padding: 15px;
     width: 100%;
+    background: #f0eeee;
+    opacity: 0.7;
 }
 
 .login_button {
-    background: #ee665c;
+    background:  #005c91;
+    border: solid #333;
     border-radius: 8px;
+    border-width: 2px;
     color: #fff;
     cursor: pointer;
     max-width: 300px;
@@ -67,7 +71,7 @@
 
 .login_button:disabled {
     background: #ffffff30;
-    color: #fff;
+    color: #333;
     cursor: auto;
     transition: all .3s ease;
 }
