--- a/css/game.css
+++ b/css/game.css
@@ -61,7 +61,7 @@ header {
     position: absolute;
     background-size: cover;
     background-position: center;
-    border: 2px solid #39813a;
+    border: 2px solid #1a233b;
     border-radius: 5px;
     transition: all 400ms ease;
 }
