--- a/css/reset.css
+++ b/css/reset.css
@@ -7,5 +7,5 @@
     list-style: none;
     border: none;
     font-family: 'Press Start 2P', cursive;
-    background-image: url(../images/rick-background.png);
+    background-image: url(../images/loginbg.png);
 }
