--- a/css/game.css
+++ b/css/game.css
@@ -23,6 +23,8 @@ header {
     background: rgba(255, 2555, 2555, 0.8);
     font-size: 1.2em;
 }
+
+
 .player {
     background: transparent;
 }
@@ -43,6 +45,8 @@ header {
    max-width: 800px;
    margin: 0 auto;
    background: transparent;
+
+   z-index: 1;
 }
 
 .card {
@@ -91,7 +95,7 @@ header {
     width: 20vh;
     height: 10vh; 
     border-radius: 25px;
-    z-index: 1;
+    z-index: 2;
    
 }
 
@@ -105,8 +109,7 @@ header {
     border: solid black 2px;
     cursor: pointer;
     transform: scale(1.2) ease;
-    background: #ccc;
-    
+    background: #dd3232;
 }
 
 
